--- a/css/resume.css
+++ b/css/resume.css
@@ -136,30 +136,46 @@ body {
 .home {
   width: 85%;
   height: 280px;
-  background: #ffffff;
+  background: #e6e6e6;
   margin: 0 auto;
 }
 .home .home-title {
   width: 60%;
   height: 110px;
-  border-bottom: 1px solid #aaa;
   margin: 0 auto;
   text-align: center;
   color: #0eb57d;
   padding-top: 40px;
 }
-.home .home-title strong {
+.home .home-title .title {
   font-size: 25px;
+  position: relative;
+  top: 200px;
+  opacity: 0;
 }
 .home .home-title p {
   font-size: 15px;
   margin-top: 5px;
+  position: relative;
+  top: 200px;
+  opacity: 0;
+}
+.home .underline {
+  width: 0;
+  height: 1px;
+  background: #aaa;
+  margin: 0 auto;
 }
 .home .link {
   text-align: center;
 }
 .home .link div {
   padding-top: 30px;
+}
+.home .link div a {
+  transform: scale(0, 0);
+  transition: transform .5s;
+  display: inline-block;
 }
 .home .link div .iconfont {
   font-size: 40px;
@@ -189,21 +205,25 @@ body {
   margin: 0 1%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: .3s;
+  opacity: 0;
 }
 .about-img {
   float: left;
   width: 40%;
   height: 480px;
   background: url(../img/photo.jpg) no-repeat top right / cover;
+  right: 800px;
+  position: absolute;
 }
 .about-info {
-  float: left;
+  float: right;
   padding: 0 3%;
   background: #ffffff;
   width: 54%;
   color: #555;
   height: 480px;
   position: relative;
+  right: -1000px;
 }
 .about-info .info-header {
   height: 172px;
@@ -611,11 +631,14 @@ body {
   .home .home-title {
     width: 90%;
   }
-  .home .home-title strong {
-    font-size: 15px;
+  .home .home-title .title {
+    font-size: 16px;
   }
   .home .home-title p {
     font-size: 12px;
+  }
+  .home .underline {
+    width: 0;
   }
   .home .link {
     text-align: center;
@@ -636,10 +659,14 @@ body {
     top: 5px;
     background-size: contain;
     z-index: 3;
+    transform: scale(0, 0);
+    transition: transform .5s;
   }
   .about-info {
     width: 96%;
     padding: 0 2%;
+    right: 0;
+    top: 500px;
   }
   .about-info .overview-name {
     font-size: 20px;
@@ -742,11 +769,14 @@ body {
   .home .home-title {
     width: 90%;
   }
-  .home .home-title strong {
-    font-size: 15px;
+  .home .home-title .title {
+    font-size: 16px;
   }
   .home .home-title p {
-    font-size: 12px;
+    font-size: 14px;
+  }
+  .home .underline {
+    width: 0;
   }
   .home .link {
     text-align: center;
@@ -759,6 +789,7 @@ body {
   }
   .about-me-content {
     width: 98%;
+    height: 450px;
   }
   .about-img {
     height: 130px;
@@ -767,10 +798,15 @@ body {
     top: 5px;
     background-size: contain;
     z-index: 3;
+    transform: scale(0, 0);
+    transition: transform .5s;
   }
   .about-info {
     width: 96%;
     padding: 0 2%;
+    right: 0;
+    height: 450px;
+    top: 500px;
   }
   .about-info .overview-name {
     font-size: 14px;
