--- a/css/resume.less
+++ b/css/resume.less
@@ -8,6 +8,7 @@ body {
 @active:#AE1C1C;
 @boxShadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 @boxShadowHover: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+@boxShadowHide: 0 0 0 0 rgba(0,0,0,0), 0 0 0x 0 rgba(0,0,0,0);
 .fl { float: left;}
 .fr { float: right;}
 .clear { zoom: 1; }
@@ -107,25 +108,26 @@ body {
 .home {
 	width: 85%;
 	height: 280px;
-	background: @background;
+	background: #e6e6e6;
 	margin: 0 auto;
 
 	.home-title {
 		width: 60%;
 		height: 110px;
-		border-bottom: 1px solid #aaa;
 		margin: 0 auto;
 		text-align: center;
 		color: @color;
 		padding-top: 40px;
-		strong { font-size: 25px; }
-		p { font-size: 15px; margin-top: 5px;}
-	}
 
+		.title { font-size: 25px; position: relative; top: 200px; opacity: 0;}
+		p { font-size: 15px; margin-top: 5px; position: relative; top: 200px; opacity: 0;}
+	}
+	.underline { width: 0; height: 1px; background: #aaa; margin: 0 auto;}
 	.link {
 		text-align: center;
 		div {
 			padding-top: 30px;
+			a {transform: scale(0,0); transition: transform .5s; display: inline-block;}
 			.iconfont {
 				font-size: 40px;
 				color: @color;
@@ -141,18 +143,19 @@ body {
 .about-me { max-width: 1150px; margin: 0 auto;  }
 .about-me-content:hover { box-shadow: @boxShadowHover;}
 .about-me-content { height: 480px;  position: relative; width: 98%; margin: 0 1%;
-	box-shadow: @boxShadow; transition: .3s;}
+	box-shadow: @boxShadow; transition: .3s; opacity: 0;}
 
-.about-img { float: left; width: 40%; height: 480px; background: url(../img/photo.jpg) no-repeat top right/cover;}
+.about-img { float: left; width: 40%; height: 480px; background: url(../img/photo.jpg) no-repeat top right/cover;
+ 	right: 800px; position: absolute;  }
 .about-info {
-	float: left;
+	float: right;
 	padding: 0 3%;
 	background: @background;
 	width: 54%;
 	color: #555;
 	height: 480px;
 	position: relative;
-
+	right: -1000px;
 	.info-header {
 		height: 172px;
 		border-bottom: 1px solid rgba(0,0,0,0.2);
@@ -165,6 +168,7 @@ body {
 			position: relative;
 			display: inline-block;
 		}
+
 
 		.overview-name {
 			font-size: 25px;
@@ -212,6 +216,9 @@ body {
 			left: 50%; top: -10px;
 			background: @color;
 			box-shadow: @boxShadow;
+			transform: translateY(-600px);
+			opacity: 0;
+			transition: .3s;
 			ul { margin-top: 54px;}
 			.subset {
 				margin-bottom: 93px;
@@ -222,24 +229,25 @@ body {
 				border-radius: 5px;
 				background: @color;
 				margin: 0 0 19px -5px;
+				transform: scale(0);
+				transition: .3s;
 			}
 		}
+
 	.list {
 		width: 45%;
 		float: left;
 
-		.list-children:hover { box-shadow: @boxShadowHover;}
 		.list-children {
 			width: 100%;
 			padding: 10px;
 			box-sizing: border-box;
 			margin: 2% 0;
-			transition: .3s;
+			opacity: 0;
 			position: relative;
 			float: left;
 			box-shadow: @boxShadow;
 			background: @background;
-			transition: .4s;
 
 			.triangle-down-left {
 				.triangle;
@@ -294,17 +302,16 @@ body {
 		margin: 0 auto;
 		position: relative;
 
-			.demo-list:hover {box-shadow: @boxShadowHover;}
 			.demo-list {
 				width: 98%;
 				box-sizing: border-box;
 				color: #333;
 				background: @background;
-				transition: .4s;
 				position: relative;
 				top: 0;
 				margin: 0 1% 15px;
 				box-shadow: @boxShadow;
+				opacity: 0;
 
 				.demo-img {
 					width: 40%;
@@ -362,8 +369,7 @@ body {
 .work-content {
 	max-width: 1200px;
 	margin: 0 auto;
-	
-	.work-list:hover { box-shadow: @boxShadowHover;}
+
 	.work-list {
 		width: 30%;
 		margin: 0 1.111%;
@@ -371,8 +377,8 @@ body {
 		float: left;
 		margin-top: 25px;
 		box-shadow: @boxShadow;
-		transition: .3s;
 		position: relative;
+		opacity: 0;
 		.bg {width: 30%;  height: 300px;}
 		.work-list-warp { width: 100%; position: absolute; top: 0; left: 0; background: #fff; padding-bottom: 15px;}
 		.company {
@@ -398,16 +404,16 @@ body {
 
 
 .thank-text { padding: 1% 1%; font-size: 20px; margin-bottom: 15px; color: #999; text-align: center; }
-.contact-content:hover {box-shadow: @boxShadowHover; }
+
 .contact-content {
 	max-width: 800px;
 	margin: 40px auto 0;
 	position: relative;
 	box-sizing: border-box;
 	box-shadow: @boxShadow;
-	transition: .4s;
+	opacity: 0;
 
-	.contact-list-warp {background: #fff; height: 320px; padding: 0 20%;
+	.contact-list-warp {background: #fff; height: 320px; padding: 0 20%; 
 		.arrow-box {
 			padding: 5px 18px; margin: 20px 0 5px 0;
 		}
@@ -491,9 +497,10 @@ body {
 		width: 97%;
 		.home-title {
 			width: 90%;
-			strong { font-size: 15px; }
+			.title { font-size: 16px; }
 			p { font-size: 12px;}
 		}
+		.underline { width: 0;}
 		.link {
 			text-align: center;
 			div {
@@ -507,9 +514,9 @@ body {
 	.title { margin-top: 50px;}
 
 	.about-me-content { width: 98%; }
-	.about-img { height: 162px;  position: absolute; right: 1%; top: 5px; background-size: contain; z-index: 3;}
+	.about-img { height: 162px;  position: absolute; right: 1%; top: 5px; background-size: contain; z-index: 3; transform: scale(0,0); transition: transform .5s;}
 	.about-info {
-		width: 96%;  padding: 0 2%;
+		width: 96%;  padding: 0 2%; right: 0; top: 500px;
 		.overview-name {
 			font-size: 20px;
 			span { font-size: 25px;}
@@ -597,10 +604,10 @@ body {
 		width: 97%;
 		.home-title {
 			width: 90%;
-			strong { font-size: 15px; }
-			p { font-size: 12px;}
+			.title { font-size: 16px; }
+			p { font-size: 14px;}
 		}
-
+		.underline { width: 0;}
 		.link {
 			text-align: center;
 			div {
@@ -613,10 +620,10 @@ body {
 
 	.title { margin: 50px auto 30px;}
 
-	.about-me-content { width: 98%; }
-	.about-img { height: 130px;  position: absolute; right: 1%; top: 5px; background-size: contain; z-index: 3;}
+	.about-me-content { width: 98%; height: 450px;}
+	.about-img { height: 130px;  position: absolute; right: 1%; top: 5px; background-size: contain; z-index: 3;transform: scale(0,0); transition: transform .5s;}
 	.about-info {
-		width: 96%;  padding: 0 2%;
+		width: 96%;  padding: 0 2%; right: 0; height: 450px; top: 500px;
 		.overview-name {
 			font-size: 14px;
 			span { font-size: 18px;}
