--- a/css/resume.less
+++ b/css/resume.less
@@ -146,9 +146,9 @@ body {
 	box-shadow: @boxShadow; transition: .3s; opacity: 0;}
 
 .about-img { float: left; width: 40%; height: 480px; background: url(../img/photo.jpg) no-repeat top right/cover;
- 	right: 800px; position: absolute; 
+ 	right: 800px; position: absolute;
 
-	.mask {width: 100%; height: 480px; background: rgba(255,255,255,0.9); line-height: 480px; text-align: center; opacity: 0; transition: .5s;
+	.mask {width: 100%; height: 480px; background: rgba(255,255,255,0.7);  line-height: 480px; text-align: center; opacity: 0; transition: .5s;
 		.download { font-size: 150px; color: @color;}
  	 }
 	}
@@ -362,14 +362,14 @@ body {
 						}
 					}
 					.h4 {padding-bottom: 5px; margin-bottom: 5px; }
-					.technology {width: 50%; float: left; margin-top: 10px; padding-bottom: 10px; 
+					.technology {width: 50%; float: left; margin-top: 10px; padding-bottom: 10px;
 						ul {
 							padding-right: 8%;  margin-left: 15px; box-sizing: border-box;
 						}
 
 						h4 {.h4;}
 					}
-					.responsibility {width: 50%;  float: left; margin-top: 10px; padding-bottom: 10px; 
+					.responsibility {width: 50%;  float: left; margin-top: 10px; padding-bottom: 10px;
 						ul { margin-left: 15px;
 
 						}
@@ -536,7 +536,12 @@ body {
 	.title { margin-top: 50px;}
 
 	.about-me-content { width: 98%; }
-	.about-img { height: 162px;  position: absolute; right: 1%; top: 5px; background-size: contain; z-index: 3; transform: scale(0,0); transition: transform .5s;}
+	.about-img { height: 162px; width: 131px;  position: absolute; right: 1%; top: 5px; background-size: contain; z-index: 3;
+		transform: scale(0,0); transition: transform .5s;
+		.mask {height: 162px; line-height: 162px;
+			.download { font-size: 50px;}
+	 	 }
+	}
 	.about-info {
 		width: 96%;  padding: 0 2%; right: 0; top: 500px;
 		.overview-name {
@@ -649,7 +654,12 @@ body {
 	.title { margin: 50px auto 30px;}
 
 	.about-me-content { width: 98%; height: 450px;}
-	.about-img { height: 130px;  position: absolute; right: 1%; top: 5px; background-size: contain; z-index: 3;transform: scale(0,0); transition: transform .5s;}
+	.about-img { width: 110px; position: absolute; right: 1%; top: 5px; background-size: contain;
+		z-index: 3;transform: scale(0,0); transition: transform .5s;
+		.mask {height: 137px; line-height: 137px;
+			.download { font-size: 40px;}
+	 	 }
+	}
 	.about-info {
 		width: 96%;  padding: 0 2%; right: 0; height: 450px; top: 500px;
 		.overview-name {
